# Scattering-Sampling

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  sample.h  sample_2to2.cpp  sample_2to3.cpp  scattering.h  scattering_2to2.cpp  scattering_2to3.cpp
